--- a/templates/consul_sysvinit.j2
+++ b/templates/consul_sysvinit.j2
@@ -8,7 +8,7 @@
 . /etc/init.d/functions
 
 CONSUL=/usr/local/bin/consul
-CONFIG=/etc/consul.d/{{ consul_node_role }}
+CONFIG=/etc/consul.d
 PID_FILE=/var/run/consul/consul.pid
 LOG_FILE=/var/log/consul/consul.log
 
